# Compiler

./: .gitignore  CFGReader.cpp  CFGRule.cpp  CFGRule.h  CMakeLists.txt  DFA.cpp  DFA.h  DFA_State.cpp  DFA_State.h  Lexical_Analyzer_Generator.cpp  Lexical_Analyzer_Generator.h  Matcher.cpp  Matcher.h  Minimize.cpp  Minimize.h  NFA.cpp  NFA.h  NFA_State.cpp  NFA_State.h  README.md  Scanner.cpp  Scanner.h  Token.cpp  Token.h  input.txt  main.cpp  output.txt  test.txt
phase1/: DFA_State.cpp  DFA_State.h  Matcher.cpp  Matcher.h  Minimize.cpp  Minimize.h  NFA.h  NFA_State.cpp  NFA_State.h  Scanner.cpp  Scanner.h  test.txt
phase2/: CFGReader.cpp  CFGReader.h  CFGRule.cpp  CFGRule.h  Combiner.cpp  Combiner.h  LL1_Generator.cpp  LL1_Generator.h  OUT.txt  ParsingTable.cpp  ParsingTable.h  Token.cpp  Token.h  cfg_rules.txt  test.txt
